# data-modeling-pipeline

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: config.yaml  paths.py
data/: pipeline.db
data/raw/: raw_data.csv
src/analysis/: sql_analysis.py
src/api/: app.py
src/cleaning/: data_cleaner.py
src/database/: db_handler.py
src/feature_engineering/: feature_builder.py
src/ingestion/: fake_data_generator.py
src/models/: evaluate.py  predict.py  train.py
src/pipeline/: pipeline_runner.py
src/utils/: config_loader.py  logger.py
src/validation/: data_validator.py
src/visualization/: dashboard.py
tests/: test_cleaner.py  test_pipeline.py  test_validator.py
