[project]
name = "data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=4.2.0",
    "faker>=40.11.1",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.19.0",
    "vega-datasets>=0.9.0",
]
